fix [CP-502] fix switch lang layout shifts

--- a/packages/components/containers/signup/AccountPublicLayout.scss
+++ b/packages/components/containers/signup/AccountPublicLayout.scss
@@ -24,7 +24,7 @@ $default-height-fields: 4.1rem;
 	.pm-field-icon-container:focus-within,
 	.pm-field:focus {
 		box-shadow: none;
-		border-color: $pm-blue;
+		border-color: $pm-primary;
 	}
 	.right-icon,
 	select.pm-field {
